test/tests/stages/17_supporting_dynamic_memory_allocation/valid/libraries/sizeof_extern.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[9]:
  double
  identifier(large_array)
  [
  const int(1000)
  ]
  [
  const int(2000)
  ]
  ;
