test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/switch_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  void
  identifier(f)
  (
  void
  )
  {
  return
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  identifier(f)
  (
  )
  )
  {
  default
  :
  return
  const int(0)
  ;
  }
  }
